[tool.poetry]
name = "dinesafe"
version = "0"
description = ""
authors = ["Tianle Chen <tianlechen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
humanfriendly = "*"
pandas = "*"
requests = "*"
requests-cache = "*"
scikit-learn = "*"
streamlit = "*"
streamlit-js-eval = "*"
xmltodict = "*"
wget = "*"

[tool.poetry.group.dev.dependencies]
isort = "5.12.0" # should match .pre-commit-config.yaml
pylint = "*"
autopep8 = "*"
pytest = "*"
flake8 = "6.0.0" # should match .pre-commit-config.yaml
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
