[tool.poetry]
name = "dinesafe"
version = "0"
description = ""
authors = ["Tianle Chen <tianlechen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9.7,<4.0" # should match Dockerfile
humanfriendly = "*"
pandas = "*"
requests = "*"
requests-cache = "*"
scikit-learn = "*"
streamlit = "1.13.0"
streamlit-js-eval = "*"
xmltodict = "*"
wget = "*"
mysql-connector-python = "^8.0.33"
sqlalchemy = "^2.0.12"

[tool.poetry.group.dev.dependencies]
pylint = "*"
autopep8 = "*"
pytest = "*"
pre-commit = "^3.2.2"
black = "23.3.0" # should match .pre-commit-config.yaml
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
